[tool.poetry]
name = "leetcode-stat"
version = "0.1.0"
description = ""
authors = ["Ivan Kovtun <jeanlacroix@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.111.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
